# fulmen

./: .gitignore  LICENSE.md  Makefile  README.md  build.py  fulmen.sln  run.sh
backend/: CMakeLists.txt
backend/scripts/: parse_manifest.py
backend/src/: container.cpp  container.h  internal.h
cli/: Makefile  fulmen.c
docs/: building_a_container.md
ui/: App.axaml  App.axaml.cs  FulmenUI.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindowViewModel.cs  Program.cs  main.cs  ui.csproj
ui/.avalonia-build-tasks/: id
